src/parser_smt/smt.output
Grammaire

    0 $accept: input $end

    1 input: formula_completed

    2 formula_completed: formula TK_END

    3 formula: TK_VAR TK_EQUAL TK_VAR
    4        | TK_VAR TK_INEQUAL TK_VAR
    5        | TK_LPAREN formula TK_RPAREN
    6        | formula TK_AND formula
    7        | formula TK_NEWLINE formula
    8        | formula TK_OR formula
    9        | formula TK_XOR formula
   10        | formula TK_IMPLY formula
   11        | formula TK_EQUIV formula
   12        | TK_NEGATE formula


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
TK_EQUAL (258) 3
TK_INEQUAL (259) 4
TK_AND (260) 6
TK_NEWLINE (261) 7
TK_OR (262) 8
TK_XOR (263) 9
TK_IMPLY (264) 10
TK_EQUIV (265) 11
TK_NEGATE (266) 12
TK_END (267) 2
TK_LPAREN (268) 5
TK_RPAREN (269) 5
TK_VAR (270) 3 4


Non-terminaux, suivis des règles où ils apparaissent

$accept (16)
    à gauche: 0
input (17)
    à gauche: 1, à droite: 0
formula_completed (18)
    à gauche: 2, à droite: 1
formula (19)
    à gauche: 3 4 5 6 7 8 9 10 11 12, à droite: 2 5 6 7 8 9 10 11
    12


État 0

    0 $accept: . input $end
    1 input: . formula_completed
    2 formula_completed: . formula TK_END
    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    input              aller à l'état 4
    formula_completed  aller à l'état 5
    formula            aller à l'état 6


État 1

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula
   12        | TK_NEGATE . formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 7


État 2

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    5        | TK_LPAREN . formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 8


État 3

    3 formula: TK_VAR . TK_EQUAL TK_VAR
    4        | TK_VAR . TK_INEQUAL TK_VAR

    TK_EQUAL    décalage et aller à l'état 9
    TK_INEQUAL  décalage et aller à l'état 10


État 4

    0 $accept: input . $end

    $end  décalage et aller à l'état 11


État 5

    1 input: formula_completed .

    $défaut  réduction par utilisation de la règle 1 (input)


État 6

    2 formula_completed: formula . TK_END
    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    TK_AND      décalage et aller à l'état 12
    TK_NEWLINE  décalage et aller à l'état 13
    TK_OR       décalage et aller à l'état 14
    TK_XOR      décalage et aller à l'état 15
    TK_IMPLY    décalage et aller à l'état 16
    TK_EQUIV    décalage et aller à l'état 17
    TK_END      décalage et aller à l'état 18


État 7

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula
   12        | TK_NEGATE formula .  [TK_AND, TK_NEWLINE, TK_OR, TK_XOR, TK_IMPLY, TK_EQUIV, TK_END, TK_RPAREN]

    $défaut  réduction par utilisation de la règle 12 (formula)

    Conflit entre la règle 12 et le jeton TK_AND résolu par réduction (TK_AND < TK_NEGATE).
    Conflit entre la règle 12 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_NEGATE).
    Conflit entre la règle 12 et le jeton TK_OR résolu par réduction (TK_OR < TK_NEGATE).
    Conflit entre la règle 12 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_NEGATE).
    Conflit entre la règle 12 et le jeton TK_IMPLY résolu par réduction (TK_IMPLY < TK_NEGATE).
    Conflit entre la règle 12 et le jeton TK_EQUIV résolu par réduction (TK_EQUIV < TK_NEGATE).


État 8

    5 formula: TK_LPAREN formula . TK_RPAREN
    6        | formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    TK_AND      décalage et aller à l'état 12
    TK_NEWLINE  décalage et aller à l'état 13
    TK_OR       décalage et aller à l'état 14
    TK_XOR      décalage et aller à l'état 15
    TK_IMPLY    décalage et aller à l'état 16
    TK_EQUIV    décalage et aller à l'état 17
    TK_RPAREN   décalage et aller à l'état 19


État 9

    3 formula: TK_VAR TK_EQUAL . TK_VAR

    TK_VAR  décalage et aller à l'état 20


État 10

    4 formula: TK_VAR TK_INEQUAL . TK_VAR

    TK_VAR  décalage et aller à l'état 21


État 11

    0 $accept: input $end .

    $défaut  accepter


État 12

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    6        | formula TK_AND . formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 22


État 13

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    7        | formula TK_NEWLINE . formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 23


État 14

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    8        | formula TK_OR . formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 24


État 15

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
    9        | formula TK_XOR . formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 25


État 16

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   10        | formula TK_IMPLY . formula
   11        | . formula TK_EQUIV formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 26


État 17

    3 formula: . TK_VAR TK_EQUAL TK_VAR
    4        | . TK_VAR TK_INEQUAL TK_VAR
    5        | . TK_LPAREN formula TK_RPAREN
    6        | . formula TK_AND formula
    7        | . formula TK_NEWLINE formula
    8        | . formula TK_OR formula
    9        | . formula TK_XOR formula
   10        | . formula TK_IMPLY formula
   11        | . formula TK_EQUIV formula
   11        | formula TK_EQUIV . formula
   12        | . TK_NEGATE formula

    TK_NEGATE  décalage et aller à l'état 1
    TK_LPAREN  décalage et aller à l'état 2
    TK_VAR     décalage et aller à l'état 3

    formula  aller à l'état 27


État 18

    2 formula_completed: formula TK_END .

    $défaut  réduction par utilisation de la règle 2 (formula_completed)


État 19

    5 formula: TK_LPAREN formula TK_RPAREN .

    $défaut  réduction par utilisation de la règle 5 (formula)


État 20

    3 formula: TK_VAR TK_EQUAL TK_VAR .

    $défaut  réduction par utilisation de la règle 3 (formula)


État 21

    4 formula: TK_VAR TK_INEQUAL TK_VAR .

    $défaut  réduction par utilisation de la règle 4 (formula)


État 22

    6 formula: formula . TK_AND formula
    6        | formula TK_AND formula .  [TK_AND, TK_NEWLINE, TK_OR, TK_XOR, TK_IMPLY, TK_EQUIV, TK_END, TK_RPAREN]
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    $défaut  réduction par utilisation de la règle 6 (formula)

    Conflit entre la règle 6 et le jeton TK_AND résolu par réduction (%left TK_AND).
    Conflit entre la règle 6 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_AND).
    Conflit entre la règle 6 et le jeton TK_OR résolu par réduction (TK_OR < TK_AND).
    Conflit entre la règle 6 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_AND).
    Conflit entre la règle 6 et le jeton TK_IMPLY résolu par réduction (TK_IMPLY < TK_AND).
    Conflit entre la règle 6 et le jeton TK_EQUIV résolu par réduction (TK_EQUIV < TK_AND).


État 23

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    7        | formula TK_NEWLINE formula .  [TK_NEWLINE, TK_END, TK_RPAREN]
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    TK_AND    décalage et aller à l'état 12
    TK_OR     décalage et aller à l'état 14
    TK_XOR    décalage et aller à l'état 15
    TK_IMPLY  décalage et aller à l'état 16
    TK_EQUIV  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 7 (formula)

    Conflit entre la règle 7 et le jeton TK_AND résolu par décalage (TK_NEWLINE < TK_AND).
    Conflit entre la règle 7 et le jeton TK_NEWLINE résolu par réduction (%left TK_NEWLINE).
    Conflit entre la règle 7 et le jeton TK_OR résolu par décalage (TK_NEWLINE < TK_OR).
    Conflit entre la règle 7 et le jeton TK_XOR résolu par décalage (TK_NEWLINE < TK_XOR).
    Conflit entre la règle 7 et le jeton TK_IMPLY résolu par décalage (TK_NEWLINE < TK_IMPLY).
    Conflit entre la règle 7 et le jeton TK_EQUIV résolu par décalage (TK_NEWLINE < TK_EQUIV).


État 24

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    8        | formula TK_OR formula .  [TK_NEWLINE, TK_OR, TK_XOR, TK_IMPLY, TK_EQUIV, TK_END, TK_RPAREN]
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    TK_AND  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 8 (formula)

    Conflit entre la règle 8 et le jeton TK_AND résolu par décalage (TK_OR < TK_AND).
    Conflit entre la règle 8 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_OR).
    Conflit entre la règle 8 et le jeton TK_OR résolu par réduction (%left TK_OR).
    Conflit entre la règle 8 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_OR).
    Conflit entre la règle 8 et le jeton TK_IMPLY résolu par réduction (TK_IMPLY < TK_OR).
    Conflit entre la règle 8 et le jeton TK_EQUIV résolu par réduction (TK_EQUIV < TK_OR).


État 25

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
    9        | formula TK_XOR formula .  [TK_NEWLINE, TK_XOR, TK_IMPLY, TK_EQUIV, TK_END, TK_RPAREN]
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula

    TK_AND  décalage et aller à l'état 12
    TK_OR   décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 9 (formula)

    Conflit entre la règle 9 et le jeton TK_AND résolu par décalage (TK_XOR < TK_AND).
    Conflit entre la règle 9 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_XOR).
    Conflit entre la règle 9 et le jeton TK_OR résolu par décalage (TK_XOR < TK_OR).
    Conflit entre la règle 9 et le jeton TK_XOR résolu par réduction (%left TK_XOR).
    Conflit entre la règle 9 et le jeton TK_IMPLY résolu par réduction (TK_IMPLY < TK_XOR).
    Conflit entre la règle 9 et le jeton TK_EQUIV résolu par réduction (TK_EQUIV < TK_XOR).


État 26

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   10        | formula TK_IMPLY formula .  [TK_NEWLINE, TK_IMPLY, TK_EQUIV, TK_END, TK_RPAREN]
   11        | formula . TK_EQUIV formula

    TK_AND  décalage et aller à l'état 12
    TK_OR   décalage et aller à l'état 14
    TK_XOR  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 10 (formula)

    Conflit entre la règle 10 et le jeton TK_AND résolu par décalage (TK_IMPLY < TK_AND).
    Conflit entre la règle 10 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_IMPLY).
    Conflit entre la règle 10 et le jeton TK_OR résolu par décalage (TK_IMPLY < TK_OR).
    Conflit entre la règle 10 et le jeton TK_XOR résolu par décalage (TK_IMPLY < TK_XOR).
    Conflit entre la règle 10 et le jeton TK_IMPLY résolu par réduction (%left TK_IMPLY).
    Conflit entre la règle 10 et le jeton TK_EQUIV résolu par réduction (TK_EQUIV < TK_IMPLY).


État 27

    6 formula: formula . TK_AND formula
    7        | formula . TK_NEWLINE formula
    8        | formula . TK_OR formula
    9        | formula . TK_XOR formula
   10        | formula . TK_IMPLY formula
   11        | formula . TK_EQUIV formula
   11        | formula TK_EQUIV formula .  [TK_NEWLINE, TK_EQUIV, TK_END, TK_RPAREN]

    TK_AND    décalage et aller à l'état 12
    TK_OR     décalage et aller à l'état 14
    TK_XOR    décalage et aller à l'état 15
    TK_IMPLY  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 11 (formula)

    Conflit entre la règle 11 et le jeton TK_AND résolu par décalage (TK_EQUIV < TK_AND).
    Conflit entre la règle 11 et le jeton TK_NEWLINE résolu par réduction (TK_NEWLINE < TK_EQUIV).
    Conflit entre la règle 11 et le jeton TK_OR résolu par décalage (TK_EQUIV < TK_OR).
    Conflit entre la règle 11 et le jeton TK_XOR résolu par décalage (TK_EQUIV < TK_XOR).
    Conflit entre la règle 11 et le jeton TK_IMPLY résolu par décalage (TK_EQUIV < TK_IMPLY).
    Conflit entre la règle 11 et le jeton TK_EQUIV résolu par réduction (%left TK_EQUIV).
